--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,24 @@
+* {
+  box-sizing: border-box; }
+
+body {
+  margin: 0; }
+
+h1, h2, h3 {
+  margin: 0;
+  font-weight: normal; }
+
+ul, ol {
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+a {
+  text-decoration: none; }
+
+i {
+  font-style: normal; }
+
 #header {
   display: flex;
   align-items: center;
@@ -27,3 +48,5 @@ body {
 
 * {
   -webkit-tap-highlight-color: rgba(255, 255, 255, 0); }
+
+/*# sourceMappingURL=app.css.map */
