--- a/scss/app.css
+++ b/scss/app.css
@@ -55,6 +55,36 @@ i {
   color: #fff;
 }
 
+.navbar .nav-list {
+  display: flex;
+  align-items: center;
+}
+
+.navbar .nav-list .nav-item {
+  flex: 1;
+  cursor: pointer;
+  position: relative;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.6);
+  height: 40px;
+  line-height: 40px;
+}
+
+.navbar .nav-list .nav-item.active {
+  color: #31c27c;
+}
+
+.navbar .nav-list .nav-item.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  background: #31c27c;
+}
+
 .qq-slider {
   width: 100%;
   overflow: hidden;
@@ -76,6 +106,10 @@ i {
 .qq-slider .qq-slider-item > a img {
   width: 100%;
   display: block;
+}
+
+.hide {
+  display: none;
 }
 
 body {
