--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,8 +1,10 @@
 @import "var";
-@import "rest";
+@import "reset";
 @import "rec";
 @import "header";
+@import "navbar";
 @import "slider";
+@import "helpers";
 
 body {
     background: $body-background;
