--- a/scss/app.scss
+++ b/scss/app.scss
@@ -5,6 +5,8 @@
 @import "navbar";
 @import "slider";
 @import "helpers";
+@import "rec";
+@import "rank";
 
 body {
     background: $body-background;
