--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,9 +1,30 @@
 .qq-slider {
   width: 100%;
   overflow: hidden;
+  position: relative;
   .qq-slider-wrap {
     display: flex;
-    transition: 0.3s;
+    position: relative;
+  }
+  .ui-slider-dots {
+    position: absolute;
+    bottom: 11px;
+    left: 0;
+    right: 0;
+    padding: 0 6px;
+    text-align: center;
+    margin: 0;
+    >b{
+      display: inline-block;
+      margin: 0 3px;
+      width: 6px;
+      height: 6px;
+      border-radius: 3px;
+      background: rgba(144,144,144,.8);
+    }
+    >.active{
+      background: #fff;
+    }
   }
   .qq-slider-item {
     flex-basis: 100%;
@@ -11,7 +32,6 @@
       display: block;
       img {
         width: 100%;
-        display: block;
       }
     }
   }
